MODPATRON-49: Upgrade to RAML Module Builder 32.x (#49)
* Replaced deprecated io.vertx.core.logging.Logger by org.apache.logging.log4j.Logger

* Updated snapshot version of module and versions of RMB, aspectj and rest assured dependencies.

* Updated dependencies and added the 'log4j2-test.properties' into tests resource location.

* Swiched raml-util submodule to the new branch raml1.0 to add support of teannt API 2.0 as part of moving module to RMB 32.x

* Removed earlier introduced versions numbers variables, updated version of snapshot.

* Removed clog4j config as it stated in the https://issues.folio.org/browse/RMB-801

* Removed unneeded formatting of pom configuration, according to code reviewers comments.

* Removed smell code according to Sonar comments.

* Update run configurations for tests by allowing access level netty library. This is kind of restrictions of Netty we currently used with vert.x and java 11th.